# HPAC

./: .gitignore  README.md  build_hpac_torch.sh  setup.sh
approx/: CMakeLists.txt
approx/puppeteer/: CMakeLists.txt  README.md  puppeteer.py
approx/puppeteer/benchmarks/: CMakeLists.txt
approx/puppeteer/benchmarks/DCT_IDCT/: CMakeLists.txt  DCT_IDCT.cpp  DCT_IDCT_eval.cpp  dct.yaml.in  dct_nq.sh.in  dct_nq.yaml.in  dct_wq.sh.in  dct_wq.yaml.in
approx/puppeteer/benchmarks/HPCCG/: CMakeLists.txt  hpccg_entire.cpp  hpccg_entire.sh.in  hpccg_entire.yaml.in  hpccg_eval.cpp  hpccg_slice.cpp  hpccg_slice.sh.in  hpccg_slice.yaml.in
approx/puppeteer/benchmarks/blackscholes/: CMakeLists.txt  blackscholes.cpp  blackscholes.sh.in  blackscholes.yaml.in  blackscholes_eval.cpp
approx/puppeteer/benchmarks/blackscholes/fast_math/: fastexp.h  fastlog.h  fastpow.h
approx/puppeteer/container/: CMakeLists.txt  Dockerfile
approx/puppeteer/data/: CMakeLists.txt
approx/puppeteer/data/perf_eval/adapt_vs_puppet/: generate_figure.py
approx/puppeteer/data/perf_eval/hpccg_memory_overhead/: generate_figure.py
approx/puppeteer/data/perf_eval/thread_scaling_data/: scaling.py
approx/puppeteer/data/sensitivity/DCT/: analysis.json  approximate_plot.py  generate_figure.py
approx/puppeteer/data/sensitivity/HPCCG/ALL_ITERATIONS/: analysis.json  generate_figure.py
approx/puppeteer/data/sensitivity/HPCCG/SLICE_ITERATIONS/: analysis.json  generate_figure.py
approx/puppeteer/data/sensitivity/blackscholes/: analysis.json  generate_figure.py
approx/puppeteer/errors/: blackscholes.yaml  dct.yaml  hpccg.yaml
approx/puppeteer/inputs/: 7_1_05.raw
approx/puppeteer/libraries/: IO.cpp  metrics.cpp
approx/runtime/src/: CMakeLists.txt  approx_data_util.cpp  approx_data_util.h  approx_internal.h  approx_petrubate.cpp  approx_runtime.cpp
approx/runtime/src/include/: approx.h
approx/tests/: linear_cpu.cpp
clang/include/clang-c/: Index.h
clang/include/clang/AST/: ASTContext.h  ASTNodeTraverser.h  ApproxClause.h  ComputeDependence.h  RecursiveASTVisitor.h  TextNodeDumper.h
clang/include/clang/ASTMatchers/: ASTMatchers.h
clang/include/clang/Basic/: Approx.h  DeclNodes.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  LangOptions.def  StmtNodes.td  TokenKinds.def
clang/include/clang/Driver/: Driver.h  Options.td
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: ASTContext.cpp  ASTStructuralEquivalence.cpp  ApproxClause.cpp  CMakeLists.txt  ComputeDependence.cpp  DeclBase.cpp  DeclPrinter.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  NSAPI.cpp  Stmt.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypeLoc.cpp
clang/lib/CodeGen/: CGApproxRuntime.cpp  CGApproxRuntime.h  CGDecl.cpp  CGExpr.cpp  CGStmt.cpp  CGStmtApprox.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
clang/lib/Parse/: CMakeLists.txt  ParseApprox.cpp  ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  SemaApprox.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaTemplateInstantiateDecl.cpp  TreeTransform.h
clang/lib/Serialization/: ASTCommon.cpp  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp
clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
clang/tools/libclang/: CXCursor.cpp
llvm/: CMakeLists.txt
